@@ -20,7 +20,9 @@
 package io.wcm.wcm.commons.component;
 
 import java.util.Collection;
+import java.util.Map;
 
+import org.apache.commons.collections4.IterableUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.sling.api.resource.LoginException;
 import org.apache.sling.api.resource.Resource;
@@ -40,8 +42,6 @@ import com.day.cq.wcm.api.components.ComponentContext;
 import com.day.cq.wcm.api.components.ComponentManager;
 import com.day.cq.wcm.api.policies.ContentPolicy;
 import com.day.cq.wcm.api.policies.ContentPolicyManager;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 import io.wcm.sling.commons.adapter.AdaptTo;
 
@@ -189,7 +189,7 @@ public final class ComponentPropertyResolver implements AutoCloseable {
     return StringUtils.isNotEmpty(resource.getResourceType());
   }
 
-  @SuppressWarnings("null")
+  @SuppressWarnings({ "null", "java:S2589" }) // extra null checks for backward compatibility
   private static @Nullable Resource getResourceWithResourceType(@Nullable Resource resource) {
     if (resource == null) {
       return null;
@@ -370,6 +370,7 @@ public final class ComponentPropertyResolver implements AutoCloseable {
     return result;
   }
 
+  @SuppressWarnings("PMD.ReturnEmptyCollectionRatherThanNull")
   private @Nullable Collection<Resource> getContentPolicyResources(@NotNull String name) {
     if (contentPolicyResolution == ComponentPropertyResolution.IGNORE || resource == null) {
       return null;
@@ -388,7 +389,7 @@ public final class ComponentPropertyResolver implements AutoCloseable {
     if (parent == null) {
       return null;
     }
-    Collection<Resource> children = ImmutableList.copyOf(parent.getChildren());
+    Collection<Resource> children = IterableUtils.toList(parent.getChildren());
     if (children.isEmpty()) {
       return null;
     }
@@ -419,7 +420,7 @@ public final class ComponentPropertyResolver implements AutoCloseable {
         && !initComponentsResourceResolverFailed) {
       try {
         componentsResourceResolver = resourceResolverFactory.getServiceResourceResolver(
-            ImmutableMap.of(ResourceResolverFactory.SUBSERVICE, SERVICEUSER_SUBSERVICE));
+            Map.of(ResourceResolverFactory.SUBSERVICE, SERVICEUSER_SUBSERVICE));
       }
       catch (LoginException ex) {
         initComponentsResourceResolverFailed = true;
